# esp

./: .gitignore  Dockerfile  Makefile  backup.service  backup.timer  capture-frame.sh  data-viz.service  discover.sh  discover.ts  inverter-monitor.service  inverter-terminal.ts  logger.sh  logger.ts  package-lock.json  package.json  process-logs.ts  remote_control.service  remote_control.ts  sender.sh  sender.ts  shell.nix  tester.ts  utils.ts
backend/: cloudformation.yml
bms-decode/: bms-decode.ts  package-lock.json  package.json
common/lib/config-portal/: Cargo.toml
common/lib/rgb-led/: Cargo.toml
common/lib/wifi/: Cargo.toml
data-viz/: data-viz.ts  info-panel.ts  package-lock.json  package.json  queries.ts  worker.ts
data-viz/static/: index.html  script.js  style.css
embedded/common/lib/config-portal/: Cargo.toml  README.md
embedded/common/lib/config-portal/src/: lib.rs
embedded/common/lib/rgb-led/: Cargo.toml
embedded/common/lib/rgb-led/src/: lib.rs
embedded/common/lib/wifi/: Cargo.toml  rust-toolchain.toml
embedded/common/lib/wifi/src/: lib.rs
embedded/info-panel/: .gitignore  Cargo.toml  README.md  default.nix  sdkconfig.defaults  shell.nix
embedded/info-panel/.cargo/: config.toml
embedded/info-panel/src/: main.rs
embedded/project/: .gitignore  bacon.toml
embedded/project/src/: main.rs
info-panel/: .gitignore  Cargo.toml  README.md  build.rs  cfg.toml.example  pins.md  sdkconfig.defaults
info-panel/src/: main.rs
inv-cam/: index.ts  package-lock.json  package.json
project/: Cargo.toml  sdkconfig.defaults
project/src/: main.rs
