[package]
name = "project"
version = "0.1.0"
authors = ["root"]
edition = "2021"
resolver = "2"
rust-version = "1.85.1"

[[bin]]
name = "project"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow      = "=1.0.95"
rgb-led     = { path = "../common/lib/rgb-led" }
wifi        = { path = "../common/lib/wifi" }
toml-cfg    = "=0.1.3"
embedded-svc = "=0.28.1"

[build-dependencies]
embuild = "0.33"
