[package]
name = "info-panel"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.85.1"
build = "build.rs"

[[bin]]
name = "info-panel"
path = "src/main.rs"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
anyhow = "1"
config-portal = { path = "../common/lib/config-portal" }
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embassy-time = { version = "0.5.0", features = ["generic-queue-8"] }
embedded-svc = "0.29.0"
rgb-led = { path = "../common/lib/rgb-led" }

[build-dependencies]
embuild = "0.33.1"
