[package]
name    = "rgb-led"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow      = "=1.0.102"
esp-idf-svc = "=0.52.1"
esp-idf-hal ={ version = "=0.46.2", features = ["rmt-legacy"] }
log         = "=0.4.29"
rgb         = "0.8.53"

[build-dependencies]
embuild = "=0.33.1"
